fix: Small changes in button class hover, first-section butotns size on mobile media, about-us description size and color on media 768

--- a/css/styles.css
+++ b/css/styles.css
@@ -290,8 +290,8 @@ body {
 }
 
 .button:hover {
-  -webkit-filter: drop-shadow(3px 3px 2px #0005);
-          filter: drop-shadow(3px 3px 2px #0005);
+  -webkit-box-shadow: 3px 3px 2px #0005;
+          box-shadow: 3px 3px 2px #0005;
 }
 
 .button--transparent {
@@ -303,6 +303,13 @@ body {
 .button--transparent .button__text {
   border-bottom: 0.1rem solid #fe688b;
   padding-bottom: .2rem;
+}
+
+.button--transparent:hover {
+  -webkit-filter: drop-shadow(3px 3px 2px #0005);
+          filter: drop-shadow(3px 3px 2px #0005);
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .wrapper {
@@ -1077,6 +1084,8 @@ body {
 
   .about-us__description {
     width: 80%;
+    font-size: 2rem;
+    color: #727272;
   }
 
   .about-us__cards {
@@ -1216,7 +1225,7 @@ body {
   }
 
   .first-section__button {
-    font-size: 1rem;
+    font-size: 2rem;
   }
 
   .about-us__description {
